k8s/grafana-dev-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-dev-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-stg
spec:
  rules:
    - host: schedulerdev.zohair.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana-dev
                port:
                  number: 80
    - host: www.schedulerdev.zohair.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana-dev
                port:
                  number: 80
  tls:
    - hosts:
        - schedulerdev.zohair.dev
        - www.schedulerdev.zohair.dev
      secretName: grafana-dev-tls
